--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       width: 800px;
       height: auto;
       display: block;
-      margin-top: 20px;
+      margin-top: -90px;
     }
     .bubble text {
       text-anchor: middle;
@@ -68,7 +68,7 @@
   const data = [ 
     { category: "Social", theme: "Diverse User Needs", strength: 3 },
     { category: "Social", theme: "Accessibility & Usability", strength: 4 },
-    { category: "Social", theme: "Emotional & Behavioral Cues", strength: 2 },
+    { category: "Social", theme: "Emotional/Behavioral Cues", strength: 2 },
     { category: "Social", theme: "Rising scrutiny of dark UX", strength: 3 },
     { category: "Social", theme: "Context-Aware Personalization", strength: 4 },
     { category: "Technological", theme: "Emotionally Intelligent AI Interfaces", strength: 5 },
@@ -82,22 +82,9 @@
     { category: "Technological", theme: "Shifting to ethical, responsive design systems", strength: 5 }
   ];
 
-  const width = 800, height = 1200;
-
-  const svg = d3.select("svg")
-    .attr("viewBox", [0, 0, width, height]);
-
-  const tooltip = d3.select("#tooltip");
-
-  const root = d3.pack()
-    .size([width, height - 300])
-    .padding(5)(
-      d3.hierarchy({ children: data })
-        .sum(d => d.strength)
-  );
+  const width = 800;
 
   const color = d3.scaleOrdinal(d3.schemeSet2);
-
   const categories = Array.from(new Set(data.map(d => d.category)));
   const legend = d3.select("#legend");
   categories.forEach(cat => {
@@ -105,6 +92,21 @@
       .attr("class", "legend-item")
       .html(`<div class='legend-color' style='background:${color(cat)}'></div>${cat}`);
   });
+
+  const root = d3.pack()
+    .size([width, 1000])
+    .padding(5)(
+      d3.hierarchy({ children: data })
+        .sum(d => d.strength)
+  );
+
+  // Adjust SVG height based on node layout
+  const maxY = d3.max(root.leaves(), d => d.y + d.r);
+  const height = maxY + 20;
+  const svg = d3.select("svg")
+    .attr("viewBox", [0, 0, width, height]);
+
+  const tooltip = d3.select("#tooltip");
 
   const node = svg.selectAll("g")
     .data(root.leaves())
