--- a/index.html
+++ b/index.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<meta charset="utf-8">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>UX Trends Report</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f9f9f9;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    h1 {
+      text-align: center;
+      padding: 20px;
+      font-size: 28px;
+    }
+    svg {
+      width: 800px;
+      height: auto;
+      display: block;
+      margin-top: -90px;
+    }
+    .bubble text {
+      text-anchor: middle;
+      pointer-events: none;
+      fill: white;
+    }
+    .tooltip {
+      position: absolute;
+      text-align: center;
+      background: #333;
+      color: #fff;
+      padding: 6px;
+      border-radius: 4px;
+      pointer-events: none;
+      font-size: 12px;
+    }
+    .legend {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 10px 20px;
+      gap: 15px;
+      font-size: 14px;
+      font-weight: bold;
+    }
+    .legend-item {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+    .legend-color {
+      width: 16px;
+      height: 16px;
+      border-radius: 3px;
+    }
+  </style>
 </head>
 <body>
 <h1>Emerging UX Trends by STEEP Category and Strength</h1>
@@ -16,7 +68,7 @@
   const data = [ 
     { category: "Social", theme: "Diverse User Needs", strength: 3 },
     { category: "Social", theme: "Accessibility & Usability", strength: 4 },
-    { category: "Social", theme: "Emotional & Behavioral Cues", strength: 2 },
+    { category: "Social", theme: "Emotional/Behavioral Cues", strength: 2 },
     { category: "Social", theme: "Rising scrutiny of dark UX", strength: 3 },
     { category: "Social", theme: "Context-Aware Personalization", strength: 4 },
     { category: "Technological", theme: "Emotionally Intelligent AI Interfaces", strength: 5 },
