--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   const data = [ 
     { category: "Social", theme: "Diverse User Needs", strength: 3 },
     { category: "Social", theme: "Accessibility & Usability", strength: 4 },
-    { category: "Social", theme: "Emotional/Behavioral Cues", strength: 2 },
+    { category: "Social", theme: "Emotional & Behavioral Cues", strength: 2 },
     { category: "Social", theme: "Rising scrutiny of dark UX", strength: 3 },
     { category: "Social", theme: "Context-Aware Personalization", strength: 4 },
     { category: "Technological", theme: "Emotionally Intelligent AI Interfaces", strength: 5 },
